{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 10,
  "lineage": "573af141-b895-af0b-dcfe-98856c64ecaf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lifebit_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0560737879a54231e",
            "association_id": "eipassoc-09a3f5867648d1ca8",
            "domain": "vpc",
            "id": "eipalloc-0560737879a54231e",
            "instance": "i-00e33ad1d8da79658",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d2cbd7a749431e0f",
            "private_dns": "ip-172-16-46-60.eu-west-2.compute.internal",
            "private_ip": "172.16.46.60",
            "public_dns": "ec2-3-9-100-1.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.100.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.lifebit",
            "aws_key_pair.lifebit",
            "aws_security_group.lifebit_SG",
            "aws_subnet.lifebit_subnet",
            "aws_vpc.lifebit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lifebit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0de842d2477e3b337",
            "arn": "arn:aws:ec2:eu-west-2:389103224874:instance/i-00e33ad1d8da79658",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e33ad1d8da79658",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lifebit",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d2cbd7a749431e0f",
            "private_dns": "ip-172-16-46-60.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.46.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0167d2407ae3b0810",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04a6cc4fc05dce786"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9fe90fee52643ff",
            "tags": {
              "Name": "LifeBitVM"
            },
            "tags_all": {
              "Name": "LifeBitVM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a6cc4fc05dce786"
            ]
          },
          "dependencies": [
            "aws_key_pair.lifebit",
            "aws_security_group.lifebit_SG",
            "aws_subnet.lifebit_subnet",
            "aws_vpc.lifebit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lifebit_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:389103224874:internet-gateway/igw-0f5867151dce7e36d",
            "id": "igw-0f5867151dce7e36d",
            "owner_id": "389103224874",
            "tags": {
              "Name": "LifeBit_gw"
            },
            "tags_all": {
              "Name": "LifeBit_gw"
            },
            "vpc_id": "vpc-06380e67cdf498dd0"
          },
          "dependencies": [
            "aws_vpc.lifebit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lifebit_RTB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:389103224874:route-table/rtb-0b4411adf8301059a",
            "id": "rtb-0b4411adf8301059a",
            "owner_id": "389103224874",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5867151dce7e36d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lifebit_RTB"
            },
            "tags_all": {
              "Name": "lifebit_RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-06380e67cdf498dd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lifebit_gw",
            "aws_vpc.lifebit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lifebit_RTB_AS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e329862d2b51c7b3",
            "route_table_id": "rtb-0b4411adf8301059a",
            "subnet_id": "subnet-0d9fe90fee52643ff"
          },
          "dependencies": [
            "aws_internet_gateway.lifebit_gw",
            "aws_route_table.lifebit_RTB",
            "aws_subnet.lifebit_subnet",
            "aws_vpc.lifebit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lifebit_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:389103224874:security-group/sg-04a6cc4fc05dce786",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a6cc4fc05dce786",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lifebit_SG",
            "name_prefix": "",
            "owner_id": "389103224874",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-06380e67cdf498dd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lifebit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lifebit_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:389103224874:subnet/subnet-0d9fe90fee52643ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9fe90fee52643ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "389103224874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lifebit-subnets"
            },
            "tags_all": {
              "Name": "lifebit-subnets"
            },
            "vpc_id": "vpc-06380e67cdf498dd0"
          },
          "dependencies": [
            "aws_vpc.lifebit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lifebit_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:389103224874:vpc/vpc-06380e67cdf498dd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-02f320baf191edeb2",
            "default_route_table_id": "rtb-007607c6303aff93a",
            "default_security_group_id": "sg-043bb5c4246e945cb",
            "dhcp_options_id": "dopt-02771288557bea3c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06380e67cdf498dd0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007607c6303aff93a",
            "owner_id": "389103224874",
            "tags": {
              "Name": "lifebit-vpc"
            },
            "tags_all": {
              "Name": "lifebit-vpc"
            }
          }
        }
      ]
    }
  ]
}